--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,14 @@
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title="Welcome">
+<MainLayout
+  title="Welcome"
+  description="The personal website of software engineer Doug Neiner."
+>
   <h1>Welcome</h1>
+  <p>
+    I'm Doug, and this is my personal website. I'm in the <a
+      href="/build-in-public">process of building it</a
+    >, and eventually hope to start blogging again about web technologies.
+  </p>
 </MainLayout>
