--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,12 +4,16 @@ import Footer from "../components/Footer.astro";
 
 interface Props {
   title?: string;
+  description?: string;
   frontmatter?: {
-    title?: string;
+    title: string;
+    description: string;
   };
 }
 
 const title = Astro.props.title ?? Astro.props.frontmatter?.title;
+const description =
+  Astro.props.description ?? Astro.props.frontmatter?.description;
 ---
 
 <html lang="en">
@@ -18,6 +22,7 @@ const title = Astro.props.title ?? Astro.props.frontmatter?.title;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    {description && <meta name="description" content={description} />}
     <title>{[title, "Doug Neiner"].filter(Boolean).join(" | ")}</title>
   </head>
   <body>
@@ -39,5 +44,15 @@ const title = Astro.props.title ?? Astro.props.frontmatter?.title;
     position: absolute;
     white-space: nowrap;
     width: 1px;
+  }
+
+  html {
+    font-size: 16px;
+  }
+
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    width: min(40rem, 95vw);
+    margin: 0 auto;
   }
 </style>
