Start to add blog to site
This will make this post public, but will likely tweak it more before actually sharing it and adding the posts to the home page.

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -55,4 +55,9 @@ const description =
     width: min(40rem, 95vw);
     margin: 0 auto;
   }
+
+  main img {
+    max-width: 100%;
+    height: auto;
+  }
 </style>
