--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -15,13 +15,25 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { Content, remarkPluginFrontmatter } = await entry.render();
+const minutesRead = remarkPluginFrontmatter.minutesRead;
+const dateFormatter = new Intl.DateTimeFormat("en-US", {
+  month: "long",
+  day: "numeric",
+  year: "numeric",
+});
 ---
 
 <Layout title={entry.data.title} description={entry.data.description}>
   <article>
     <header>
       <h1>{entry.data.title}</h1>
+      <div>
+        <time datetime={entry.data.pubDate.toISOString()}>
+          {dateFormatter.format(entry.data.pubDate)}
+        </time><br />
+        {minutesRead}
+      </div>
     </header>
     <Content />
   </article>
