--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,3 +27,15 @@ const skipDisclaimer = Astro.url.pathname.startsWith("/build-in-public");
     >.
   </p>
 </footer>
+
+<style>
+  footer {
+    font-size: 0.75rem;
+    line-height: 1.3;
+    color: var(--text-secondary);
+
+    p {
+      margin: 0.5rem 0 1rem 0;
+    }
+  }
+</style>
