--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,3 +30,46 @@ const navLinks = [
     </ul>
   </nav>
 </header>
+
+<style>
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (width >= 25em) {
+    header {
+      flex-direction: row;
+      justify-content: space-between;
+      height: 5rem;
+    }
+  }
+
+  h1 {
+    font-weight: 200;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+
+    a {
+      text-decoration: none;
+      color: var(--text-primary);
+      transition: color ease-in-out 200ms;
+
+      &:hover {
+        color: var(--link);
+      }
+    }
+  }
+
+  nav {
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: row;
+      gap: 15px;
+    }
+  }
+</style>
